# machine-learning

./: app.py  pyproject.toml  teste.ipynb
